--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ a{text-decoration:none;color:inherit}
   display: flex;
   width: max-content;
   animation: ticker-scroll 30s linear infinite; /* slower for smoother loop */
+  line-height: 40px; 
 }
 
 .ticker__item {
